<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback_advice"
        android:orderInCategory="100"
        android:title="@string/action_advice"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_total_quit"
        android:orderInCategory="100"
        android:title="@string/action_quit_and_no_background"
        app:showAsAction="never" />

</menu>
